@@ -1,3 +1,11 @@
+2023-12-22  Eduardo Ochs  <eduardoochs@gmail.com>
+
+	* eev-kl-here.el: new file.
+	(ee-find-einfo-link, ee-find-eintro-link, ee-kl-sexp-klin)
+	(eeklin, eeklins): moved from "eev-kla.el" to "eev-kl-here.el".
+
+	* eev-load.el (eev-kl-here): added a (require 'eev-kl-here).
+
 2023-12-21  Eduardo Ochs  <eduardoochs@gmail.com>
 
 	* eev-tlinks.el (find-macports-links): new function.
